<?xml version="1.0" encoding="utf-8"?>
<ScrollView
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	>
	<LinearLayout
		android:orientation="vertical"
		android:padding="20.0dip"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		>
		<CheckBox
			android:id="@+id/datePicker_checkBox"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/enable_date_filter"
			>
		</CheckBox>
		<LinearLayout
			android:orientation="vertical"
			android:id="@+id/datePicker_layout"
			android:visibility="gone"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/start_date"
				>
			</TextView>
			<DatePicker
				android:id="@+id/start_datePicker"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>
			</DatePicker>
			<TextView
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:text="@string/end_date"
				>
			</TextView>
			<DatePicker
				android:id="@+id/end_datePicker"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>
			</DatePicker>
		</LinearLayout>
		<LinearLayout
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			>
			<TextView
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:text="@string/content_filter"
				android:layout_weight="0.0"
				>
			</TextView>
			<EditText
				android:id="@+id/query_content_filter"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:singleLine="true"
				android:layout_weight="1.0"
				>
			</EditText>
		</LinearLayout>
	</LinearLayout>
</ScrollView>