<?xml version="1.0" encoding="utf-8"?>
<TableLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	android:padding="20.0dip"
	android:layout_width="fill_parent"
	android:layout_height="fill_parent"
	android:layout_margin="20.0dip"
	android:stretchColumns="1"
	>
	<TableRow
		android:id="@+id/changsetting_tablerow"
		android:layout_width="fill_parent"
		>
		<TextView
			android:id="@+id/old_pw_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_column="0"
			android:text="@string/old_password"
			>
		</TextView>
		<EditText
			android:id="@+id/old_pw_edittext"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_column="1"
			android:password="true"
			android:singleLine="true"
			>
		</EditText>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		>
		<TextView
			android:id="@+id/new_pw_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_column="0"
			android:text="@string/new_password"
			>
		</TextView>
		<EditText
			android:id="@+id/new_pw_edittext"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_column="1"
			android:password="true"
			android:singleLine="true"
			>
		</EditText>
	</TableRow>
	<TableRow
		android:layout_width="fill_parent"
		>
		<TextView
			android:id="@+id/confirm_pw_text"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_column="0"
			android:text="@string/setting_confirm"
			>
		</TextView>
		<EditText
			android:id="@+id/confirm_pw_edittext"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:layout_column="1"
			android:password="true"
			android:singleLine="true"
			>
		</EditText>
	</TableRow>
</TableLayout>