<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/common_title_bg" />

    <com.hlb.scrollview.BounceScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/coversation_bg"
        android:focusable="true"
        android:focusableInTouchMode="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:background="@color/chat_background"
            android:orientation="vertical"
            android:paddingLeft="10.0dip"
            android:paddingRight="10.0dip"
            android:paddingTop="10.0dip" >

            <RelativeLayout
                android:id="@+id/accountSetting"
                android:layout_width="fill_parent"
                android:layout_height="63.0dip"
                android:background="@drawable/common_strip_setting_top"
                android:clickable="true"
                android:focusable="true" >

                <FrameLayout
                    android:id="@+id/frameLayout1"
                    android:layout_width="54.0dip"
                    android:layout_height="54.0dip"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="10.0dip" >

                    <ImageView
                        android:id="@+id/face"
                        android:layout_width="50.0dip"
                        android:layout_height="50.0dip"
                        android:layout_gravity="center"
                        android:contentDescription="@null"
                        android:src="@drawable/icon" />

                    <ImageView
                        android:id="@+id/statusIcon"
                        android:layout_width="18.0dip"
                        android:layout_height="18.0dip"
                        android:layout_gravity="bottom|right|center"
                        android:contentDescription="@null"
                        android:src="@drawable/status_online_btn" />
                </FrameLayout>

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10.0dip"
                    android:contentDescription="@null"
                    android:duplicateParentState="true"
                    android:src="@drawable/arrow_right_gray_white" />

                <TextView
                    android:id="@+id/status"
                    style="@style/C8_Font_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="10.0dip"
                    android:layout_toLeftOf="@id/imageView1"
                    android:duplicateParentState="true"
                    android:ellipsize="end"
                    android:text="@string/online" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/set_use_password"
                android:layout_width="fill_parent"
                android:layout_height="44.0dip"
                android:layout_marginTop="15.0dip"
                android:background="@drawable/common_strip_setting_top"
                android:clickable="false"
                android:focusable="false" >

                <TextView
                    android:id="@+id/usePassword"
                    style="@style/B4_Font_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="12.0dip"
                    android:duplicateParentState="true"
                    android:gravity="center_vertical"
                    android:text="@string/usePassword" />

                <com.hlb.switchbtn.SwitchButton
                    android:id="@+id/use_password_switch"
                    android:layout_width="80dip"
                    android:layout_height="28dip"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginRight="8.0dip" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16.0dip"
                android:orientation="vertical" >

                <RelativeLayout
                    android:id="@+id/set_feedback"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip"
                    android:background="@drawable/common_strip_setting_top"
                    android:clickable="true"
                    android:focusable="true" >

                    <TextView
                        style="@style/B4_Font_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.0dip"
                        android:duplicateParentState="true"
                        android:gravity="center_vertical"
                        android:text="@string/feedback" />

                    <ImageView
                        android:layout_width="14.0dip"
                        android:layout_height="14.0dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8.0dip"
                        android:contentDescription="@null"
                        android:duplicateParentState="true"
                        android:src="@drawable/arrow_right_gray_white" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/set_about"
                    android:layout_width="fill_parent"
                    android:layout_height="44.0dip"
                    android:background="@drawable/common_strip_setting_bottom"
                    android:clickable="true"
                    android:focusable="true" >

                    <TextView
                        style="@style/B4_Font_white"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerVertical="true"
                        android:layout_marginLeft="12.0dip"
                        android:duplicateParentState="true"
                        android:gravity="center_vertical"
                        android:text="@string/about" />

                    <ImageView
                        android:layout_width="14.0dip"
                        android:layout_height="14.0dip"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true"
                        android:layout_marginRight="8.0dip"
                        android:contentDescription="@null"
                        android:duplicateParentState="true"
                        android:src="@drawable/arrow_right_gray_white" />
                </RelativeLayout>
            </LinearLayout>

            <Button
                android:id="@+id/exit_app"
                style="@style/RedGreen"
                android:layout_width="fill_parent"
                android:layout_height="46.0dip"
                android:layout_marginBottom="20.0dip"
                android:layout_marginTop="15.0dip"
                android:background="@drawable/common_btn_red"
                android:text="@string/exit_app" />
        </LinearLayout>
    </com.hlb.scrollview.BounceScrollView>

</LinearLayout>